@@ -18,6 +18,7 @@ newsadmin_groupid=2
 ldap_host=localhost
 ldap_base_dn=
 ldap_web_add_password=
+sys_path_to_mailman=/usr/lib/mailman
 cgidir=/usr/local/gforge/cgi-bin
 cronolog_path=/usr/sbin/cronolog
 sys_path_to_jpgraph=/usr/lib/gforge/jpgraph/
